--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                 tão feliz com a minha escolha de curso.</p>
             </div>
             <div id="icons">
-                <a id="in" href="https://www.linkedin.com/in/jo%C3%A3o-vasconcelos-169bb1220/" target="_blank"><img src="./img/incon-in.png" alt="linkedin icon"></a>
-                <a id="ig" href="https://www.instagram.com/joaodpv/" target="_blank"><img src="./img/incon-ig.png" alt="instagram incon"></a>
-                <a id="em" href="" target="_blank"><img src="./img/incon-email.png" alt="@"></a>
+                <a id="in" href="https://www.linkedin.com/in/jo%C3%A3o-vasconcelos-169bb1220/" target="_blank"><img src="./img/icon-in.png" alt="linkedin icon"></a>
+                <a id="ig" href="https://www.instagram.com/joaodpv/" target="_blank"><img src="./img/icon-ig.png" alt="instagram incon"></a>
+                <a id="em" href="" target="_blank"><img src="./img/icon-email.png" alt="@"></a>
             </div>
         </section>
         <section id="p3">
