--- a/index.html
+++ b/index.html
@@ -1,78 +1,90 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>João Vasconcelos</title>
-        <link rel="stylesheet" href="./css/principal.css">
-    </head>
-    <body>
-        <header>
-            <content-type id="jv">
-                <h2><img src="./img/jv.png" alt="jv"></h2>
-                <nav>
-                <ul>
-                    <li><a href="#p2">Sobre mim</a></li>
-                    <li><a href="#p3">Projetos</a></li>
-                    <li><a href="#p4">Serviços</a></li>
-                    <li><a href="">Skills</a></li>
-                </ul>
-                </nav>
-            </content-type>
-        </header>
-        <section id="p1">
-            <div id="home">
-                <h1>Olá, eu sou João<br/>
-                    Vasconcelos
-                    </h1><br/>
-                    <p>Desenvolvedor Jr.</p>
-                    <br/>
-                    <a id="cv" href="">Download CV</a>
-                    <a id="ctt" href="">Entrar em contato</a>
-            </div>
-            <div id="arte">
-                <h2><img src="./img/arte.png" alt="arte"></h2>
-            </div>
-        </section>
-        <section id="p2">
-            <div id="sobre-mim">
-            <h3>Sobre mim</h3>
-            <p>Sou João Vasconcelos, Oficial R2 do Exército Brasileiro, 
-                trabalhei como freelance aos 14 anos após concluir meu 
-                curso de marquise, mas não me via trabalhando nessa área por muito tempo.
-                Em 2015 me alistei no Exército e desenvolvi varias softskills 
-                importantes para o mercado de trabalho, principalmente trabalho 
-                em equipe e liderança, posteriormente ingressei no curso de 
-                administração de empresas, onde pude estagiar na ITALIANA 
-                AUTOMOVEIS DO RECIFE no setor financeiro, e pude por em prática 
-                meu conhecimento adquirido tanto na faculdade como no exército, 
-                mas logo vi que não queria seguir no rumo administrativo, queria 
-                criar e desenvolver, não apenas seguir uma rotina as cegas, por 
-                isso resolvi migrar de curso, e hoje estou cursando Análise 
-                e dados de sistemas, onde no primeiro semestre já estou 
-                desenvolvendo um projeto, juntamente com minha equipe da faculdade, 
-                para a Secretaria Estadual de Saúde de Pernambuco, e nunca estive
-                tão feliz com a minha escolha de curso.</p>
-            </div>
-            <div id="icons">
-                <a id="in" href="https://www.linkedin.com/in/jo%C3%A3o-vasconcelos-169bb1220/" target="_blank"><img src="./img/icon-in.png" alt="linkedin icon"></a>
-                <a id="ig" href="https://www.instagram.com/joaodpv/" target="_blank"><img src="./img/icon-ig.png" alt="instagram incon"></a>
-                <a id="em" href="" target="_blank"><img src="./img/icon-email.png" alt="@"></a>
-            </div>
-        </section>
-        <section id="p3">
-            <h3>Projetos</h3>
-            <div class="placasL"></div>
-            <div class="placasP"></div>
-            <div class="placasL2"></div>
-            <div class="placasP2"></div>
-        </section>
-        <br/>
-        <section id="p4">
-            <h3>Serviços</h3>
-            <img id="dev" src="./img/desenvolvedor.png" alt="imagem desenvolvedor">
-        </section>
-        <footer> obrigado por visitar</footer>
-    </body>
+  <head>
+    <title>João Vasconcelos</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/principal.css">
+  </head>
+  <body>
+    <header>
+        <content-type id="jv">
+            <h2><img src="./img/jv.png" alt="jv"></h2>
+            <nav>
+            <ul>
+                <li><a href="#p2">Sobre mim</a></li>
+                <li><a href="#p3">Projetos</a></li>
+                <li><a href="#p4">Serviços</a></li>
+                <li><a href="#p5">Skills</a></li>
+            </ul>
+            </nav>
+        </content-type>
+    </header>
+    <section id="p1">
+        <div id="home">
+            <h1>Olá, eu sou João<br/>
+                Vasconcelos
+                </h1><br/>
+                <p>Desenvolvedor Jr.</p>
+                <br/>
+                <a id="cv" href="">Download CV</a>
+                <a id="ctt" href="">Entrar em contato</a>
+        </div>
+        <div id="arte">
+            <h2><img src="./img/arte.png" alt="arte"></h2>
+        </div>
+    </section>
+    <section id="p2">
+        <div id="sobre-mim">
+        <h3>Sobre mim</h3>
+        <p>Sou João Vasconcelos, Oficial R2 do Exército Brasileiro, 
+            trabalhei como freelance aos 14 anos após concluir meu 
+            curso de marquise, mas não me via trabalhando nessa área por muito tempo.
+            Em 2015 me alistei no Exército e desenvolvi varias softskills 
+            importantes para o mercado de trabalho, principalmente trabalho 
+            em equipe e liderança, posteriormente ingressei no curso de 
+            administração de empresas, onde pude estagiar na ITALIANA 
+            AUTOMOVEIS DO RECIFE no setor financeiro, e pude por em prática 
+            meu conhecimento adquirido tanto na faculdade como no exército, 
+            mas logo vi que não queria seguir no rumo administrativo, queria 
+            criar e desenvolver, não apenas seguir uma rotina as cegas, por 
+            isso resolvi migrar de curso, e hoje estou cursando Análise 
+            e dados de sistemas, onde no primeiro semestre já estou 
+            desenvolvendo um projeto, juntamente com minha equipe da faculdade, 
+            para a Secretaria Estadual de Saúde de Pernambuco, e nunca estive
+            tão feliz com a minha escolha de curso.</p>
+        </div>
+        <div id="icons">
+            <a id="in" href="https://www.linkedin.com/in/jo%C3%A3o-vasconcelos-169bb1220/" target="_blank"><img src="./img/icon-in.png" alt="linkedin icon"></a>
+            <a id="ig" href="https://www.instagram.com/joaodpv/" target="_blank"><img src="./img/icon-ig.png" alt="instagram incon"></a>
+            <a id="em" href="" target="_blank"><img src="./img/icon-email.png" alt="@"></a>
+        </div>
+    </section>
+    <section id="p3">
+        <h3>Projetos</h3>
+        <div class="placasL"></div>
+        <div class="placasP"></div>
+        <div class="placasL2"></div>
+        <div class="placasP2"></div>
+    </section>
+    <br/>
+    <section id="p4">
+        <h3>Serviços</h3>
+        <img id="dev" src="./img/desenvolvedor.png" alt="imagem desenvolvedor">
+    </section>
+    <section id="p5">
+        <h3>Skills</h3>
+        <div id="skills">
+        <img id="html" src="img/html-icon.png" alt="iconi html">
+        <img id="js" src="img/js-icon.png" alt="">
+        <img id="css" src="img/css-icon.png" alt="">
+        <img id="boot" src="img/bootstrap-icon.png" alt="">
+        </div>
+    </section>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  </body>
 </html>
