--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="./css/principal.css">
   </head>
   <body>
-    <header>
+    <header class="sticky-top">
         <content-type id="jv">
-            <h2><img src="./img/jv.png" alt="jv"></h2>
+            <h2><a href="index.html"><img src="./img/jv.png" alt="jv"></a></h2>
             <nav>
             <ul>
                 <li><a href="#p2">Sobre mim</a></li>
@@ -39,7 +39,7 @@
     <section id="p2">
         <div id="sobre-mim">
         <h3>Sobre mim</h3>
-        <p>Sou João Vasconcelos, Oficial R2 do Exército Brasileiro, 
+        <p class="text-justify">Sou João Vasconcelos, Oficial R2 do Exército Brasileiro, 
             trabalhei como freelance aos 14 anos após concluir meu 
             curso de marquise, mas não me via trabalhando nessa área por muito tempo.
             Em 2015 me alistei no Exército e desenvolvi varias softskills 
