--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a id="ctt" href="">Entrar em contato</a>
         </div>
         <div id="arte">
-            <h2><img src="./img/arte.png" alt="arte"></h2>
+            
         </div>
     </section>
     <section id="p2">
@@ -64,10 +64,12 @@
     </section>
     <section id="p3">
         <h3>Projetos</h3>
-        <div class="placasL"></div>
-        <div class="placasP"></div>
-        <div class="placasL2"></div>
-        <div class="placasP2"></div>
+            <section id="projetos">
+            <div class="placasL"></div>
+            <div class="placasP"></div>
+            <div class="placasL2"></div>
+            <div class="placasP2"></div>
+            </section>
     </section>
     <br/>
     <section id="p4">
@@ -83,6 +85,9 @@
         <img id="boot" src="img/bootstrap-icon.png" alt="">
         </div>
     </section>
+    <footer>
+        &copy João Vasconcelos / Obrigado poor visitar
+    </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
