--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
     <section id="p3">
         <h3>Projetos</h3>
             <section id="projetos">
-            <div class="placasL"></div>
-            <div class="placasP"></div>
-            <div class="placasL2"></div>
-            <div class="placasP2"></div>
+            <a id="museu" href="https://joaovasc.github.io/Museu-Nacional/" target="_blank"></a>
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
             </section>
     </section>
     <br/>
