--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/principal.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/jv.png"/>
   </head>
   <body>
     <header class="sticky-top">
@@ -23,19 +24,19 @@
         </content-type>
     </header>
     <section id="p1">
-        <div id="home">
+        <div id="eu">
             <h1>Olá, eu sou João<br/>
                 Vasconcelos
-                </h1><br/>
-                <p>Desenvolvedor Jr.</p>
-                <br/>
-                <a id="cv" href="">Download CV</a>
-                <a id="ctt" href="">Entrar em contato</a>
+            </h1>
+            <p>Desenvilvedor Jr.</p>
         </div>
-        <div id="arte">
-            
-        </div>
+        <div id="img"></div>
+        <div class="clear"></div>
     </section>
+        <div id="botao">
+            <a id="cv" href="">Download CV</a>
+            <a id="ctt" href="">Entrar em contato</a>
+        </div>
     <section id="p2">
         <div id="sobre-mim">
         <h3>Sobre mim</h3>
