--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="clear"></div>
     </section>
         <div id="botao">
-            <a id="cv" href="">Download CV</a>
+            <a id="cv" href="https://drive.google.com/file/d/1uDfrxlZXCRDNKFbytdtbc0tWKWH0xv0J/view?usp=sharing" target="_blank">Download CV</a>
             <a id="ctt" href="">Entrar em contato</a>
         </div>
     <section id="p2">
@@ -67,7 +67,7 @@
         <h3>Projetos</h3>
             <section id="projetos">
             <a id="museu" href="https://joaovasc.github.io/Museu-Nacional/" target="_blank"></a>
-            <a href=""></a>
+            <a id="reclame_aqui" href="https://joaovasc.github.io/Reclameaqui/" target="_blank"></a>
             <a href=""></a>
             <a href=""></a>
             </section>
@@ -83,11 +83,10 @@
         <img id="html" src="img/html-icon.png" alt="iconi html">
         <img id="js" src="img/js-icon.png" alt="">
         <img id="css" src="img/css-icon.png" alt="">
-        <img id="boot" src="img/bootstrap-icon.png" alt="">
         </div>
     </section>
     <footer>
-        &copy João Vasconcelos / Obrigado poor visitar
+        &copy João Vasconcelos / Obrigado por visitar
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
