--- a/index.html
+++ b/index.html
@@ -4,90 +4,117 @@
     <title>João Vasconcelos</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/principal.css">
+    <script src="https://kit.fontawesome.com/59dd9f0f2d.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" sizes="32x32" href="./img/jv.png"/>
   </head>
   <body>
-    <header class="sticky-top">
-        <content-type id="jv">
-            <h2><a href="index.html"><img src="./img/jv.png" alt="jv"></a></h2>
-            <nav>
-            <ul>
-                <li><a href="#p2">Sobre mim</a></li>
-                <li><a href="#p3">Projetos</a></li>
-                <li><a href="#p4">Serviços</a></li>
-                <li><a href="#p5">Skills</a></li>
-            </ul>
-            </nav>
-        </content-type>
+    <!--Cabecalho inicio-->
+
+    <header class="cabecalho">
+        <div class="logo"><a href="#"><img src="./img/jv.png" alt=""></a></div>
+        <nav class="navbar">
+            <a href="#sobre">Sobre mim</a>
+            <a href="#projetos">projetos</a>
+            <a href="#skills">Skills</a>
+        </nav>
+        <div class="icone">
+            <div class="fas fa-bars" id="menu-btn"></div>
+        </div>
     </header>
-    <section id="p1">
-        <div id="eu">
-            <h1>Olá, eu sou João<br/>
-                Vasconcelos
-            </h1>
-            <p>Desenvilvedor Jr.</p>
-        </div>
-        <div id="img"></div>
-        <div class="clear"></div>
-    </section>
-        <div id="botao">
-            <a id="cv" href="https://drive.google.com/file/d/1uDfrxlZXCRDNKFbytdtbc0tWKWH0xv0J/view?usp=sharing" target="_blank">Download CV</a>
-            <a id="ctt" href="">Entrar em contato</a>
-        </div>
-    <section id="p2">
-        <div id="sobre-mim">
-        <h3>Sobre mim</h3>
-        <p class="text-justify">Sou João Vasconcelos, Oficial R2 do Exército Brasileiro, 
-            trabalhei como freelance aos 14 anos após concluir meu 
-            curso de marquise, mas não me via trabalhando nessa área por muito tempo.
-            Em 2015 me alistei no Exército e desenvolvi varias softskills 
-            importantes para o mercado de trabalho, principalmente trabalho 
-            em equipe e liderança, posteriormente ingressei no curso de 
-            administração de empresas, onde pude estagiar na ITALIANA 
-            AUTOMOVEIS DO RECIFE no setor financeiro, e pude por em prática 
-            meu conhecimento adquirido tanto na faculdade como no exército, 
-            mas logo vi que não queria seguir no rumo administrativo, queria 
-            criar e desenvolver, não apenas seguir uma rotina as cegas, por 
-            isso resolvi migrar de curso, e hoje estou cursando Análise 
-            e dados de sistemas, onde no primeiro semestre já estou 
-            desenvolvendo um projeto, juntamente com minha equipe da faculdade, 
-            para a Secretaria Estadual de Saúde de Pernambuco, e nunca estive
-            tão feliz com a minha escolha de curso.</p>
-        </div>
-        <div id="icons">
-            <a id="in" href="https://www.linkedin.com/in/jo%C3%A3o-vasconcelos-169bb1220/" target="_blank"><img src="./img/icon-in.png" alt="linkedin icon"></a>
-            <a id="ig" href="https://www.instagram.com/joaodpv/" target="_blank"><img src="./img/icon-ig.png" alt="instagram incon"></a>
-            <a id="em" href="" target="_blank"><img src="./img/icon-email.png" alt="@"></a>
+    
+    <!--Cabecalho fim-->
+    <!--Home inicio-->
+
+    <section class="home" id="home">
+        <div class="conteudo">
+            <h1>&#60Bem<span>.Vindo></span></h1>
+            <div class="btn"><a href="https://drive.google.com/file/d/1uDfrxlZXCRDNKFbytdtbc0tWKWH0xv0J/view?usp=sharing" target="_blank">Donwload CV</a></div>
+            <div class="btn"><a href="https://api.whatsapp.com/send?1=pt_BR&phone=5581999959076" target="_blank">Entre em contato</a></div>
         </div>
     </section>
-    <section id="p3">
-        <h3>Projetos</h3>
-            <section id="projetos">
-            <a id="museu" href="https://joaovasc.github.io/Museu-Nacional/" target="_blank"></a>
-            <a id="reclame_aqui" href="https://joaovasc.github.io/Reclameaqui/" target="_blank"></a>
-            </section>
-    </section>
-    <br/>
-    <section id="p4">
-        <h3>Serviços</h3>
-        <img id="dev" src="./img/desenvolvedor.png" alt="imagem desenvolvedor">
-    </section>
-    <section id="p5">
-        <h3>Skills</h3>
-        <div id="skills">
-        <img id="html" src="img/html-icon.png" alt="iconi html">
-        <img id="js" src="img/js-icon.png" alt="">
-        <img id="css" src="img/css-icon.png" alt="">
+
+    <!--Home fim-->
+
+    <!--Sobre mim section inicio-->
+
+    <section class="sobre" id="sobre">
+
+        <h1 class="heading">&#60sobre<span>.mim></span></h1>
+
+        <div class="linha">
+
+            <div class="imagem"><img src="./img/arte.jpg" alt=""></div>
+
+            <div class="conteudo">
+                <h3>Sou João Vasconcelos</h3>
+                <p>Oficial R2 do Exército Brasileiro, 
+                    trabalhei como freelance aos 14 anos após concluir meu 
+                    curso de marquise, mas não me via trabalhando nessa área por muito tempo.
+                    Em 2015 me alistei no Exército e desenvolvi varias softskills 
+                    importantes para o mercado de trabalho, principalmente trabalho 
+                    em equipe e liderança, posteriormente ingressei no curso de 
+                    administração de empresas, onde pude estagiar na ITALIANA 
+                    AUTOMOVEIS DO RECIFE no setor financeiro, e pude por em prática 
+                    meu conhecimento adquirido tanto na faculdade como no exército, 
+                    mas logo vi que não queria seguir no rumo administrativo, queria 
+                    criar e desenvolver, não apenas seguir uma rotina as cegas, por 
+                    isso resolvi migrar de curso, e hoje estou cursando Análise 
+                    e dados de sistemas, onde no primeiro semestre já estou 
+                    desenvolvendo um projeto, juntamente com minha equipe da faculdade, 
+                    para a Secretaria Estadual de Saúde de Pernambuco, e nunca estive
+                    tão feliz com a minha escolha de curso.</p>
+            </div>
+
         </div>
     </section>
-    <footer>
-        &copy João Vasconcelos / Obrigado por visitar
-    </footer>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+    <!--Sobre mim section fim-->
+    <!--Projetos section fim-->
+
+    <section class="projetos" id="projetos">
+        <h3 class="heading">&#60meus<span>.projetos></span></h3>
+        <div class="box-container">
+            <div class="box">
+                <img src="./img/projeto1.png" alt="">
+                <h3>museu nacional</h3>
+                <div class="btn"><a href="">saiba mais</a></div>
+            </div>
+            <div class="box">
+                <img src="./img/projeto2.png" alt="">
+                <h3>reclame aqui secretaria estadual de saúde</h3>
+                <div class="btn"><a href="">saiba mais</a></div>
+            </div>
+            <div class="box">
+                <img src="./img/Captura da Web_30-1-2022_201441_joaovasc.github.io.jpeg" alt="">
+                <h3>loja virtual</h3>
+                <div class="btn"><a href="">saiba mais</a></div>
+            </div>
+        </div>
+    </section>
+
+    <!--Projetos section fim-->
+    <!--Skills section inicio-->
+
+    <section class="skills" id="skills">
+        <h3 class="heading">&#60Minhas<span>.skills></span></h3>
+        <div class="box-container">
+            <div class="box">
+                <img src="./img/html-icon.png" alt="">
+                <h3>HTML</h3>
+            </div>
+            <div class="box">
+                <img src="./img/css-icon.png" alt="">
+                <h3>CSS</h3>
+            </div>
+            <div class="box">
+                <img src="./img/js-icon.png" alt="">
+                <h3>JAVASCRIPT</h3>
+            </div>
+        </div>
+    </section>
+
+    <!--Skills section fim-->
+    <script src="./js/script.js"></script>
   </body>
 </html>
