--- a/index.html
+++ b/index.html
@@ -78,17 +78,17 @@
             <div class="box">
                 <img src="./img/projeto1.png" alt="">
                 <h3>museu nacional</h3>
-                <div class="btn"><a href="">saiba mais</a></div>
+                <div class="btn"><a href="https://joaovasc.github.io/Museu-Nacional/">saiba mais</a></div>
             </div>
             <div class="box">
                 <img src="./img/projeto2.png" alt="">
                 <h3>reclame aqui secretaria estadual de saúde</h3>
-                <div class="btn"><a href="">saiba mais</a></div>
+                <div class="btn"><a href="https://joaovasc.github.io/Reclameaqui/">saiba mais</a></div>
             </div>
             <div class="box">
                 <img src="./img/Captura da Web_30-1-2022_201441_joaovasc.github.io.jpeg" alt="">
                 <h3>loja virtual</h3>
-                <div class="btn"><a href="">saiba mais</a></div>
+                <div class="btn"><a href="https://joaovasc.github.io/Loja-virtual/">saiba mais</a></div>
             </div>
         </div>
     </section>
