--- a/index.html
+++ b/index.html
@@ -48,22 +48,14 @@
 
             <div class="conteudo">
                 <h3>Sou João Vasconcelos</h3>
-                <p>Oficial R2 do Exército Brasileiro, 
-                    trabalhei como freelance aos 14 anos após concluir meu 
-                    curso de marquise, mas não me via trabalhando nessa área por muito tempo.
-                    Em 2015 me alistei no Exército e desenvolvi varias softskills 
-                    importantes para o mercado de trabalho, principalmente trabalho 
-                    em equipe e liderança, posteriormente ingressei no curso de 
-                    administração de empresas, onde pude estagiar na ITALIANA 
-                    AUTOMOVEIS DO RECIFE no setor financeiro, e pude por em prática 
-                    meu conhecimento adquirido tanto na faculdade como no exército, 
-                    mas logo vi que não queria seguir no rumo administrativo, queria 
-                    criar e desenvolver, não apenas seguir uma rotina as cegas, por 
-                    isso resolvi migrar de curso, e hoje estou cursando Análise 
-                    e dados de sistemas, onde no primeiro semestre já estou 
-                    desenvolvendo um projeto, juntamente com minha equipe da faculdade, 
-                    para a Secretaria Estadual de Saúde de Pernambuco, e nunca estive
-                    tão feliz com a minha escolha de curso.</p>
+                <p>Sou João Vasconcelos e trago aqui algumas informações interessantes:
+
+                    - Aos 14 anos, trabalhei como freelancer após a conclusão do curso de marquise; 
+                    - Em 2015 me alistei no Exército e desenvolvi algumas soft skills importantes para o mercado de trabalho, principalmente no que se diz respeito a trabalho em equipe, disciplina e liderança;
+                    - Fiz Administração de Empresas, onde pude estagiar na ITALIANA AUTOMOVEIS DO RECIFE, no setor financeiro, que me trouxe vários aprendizados, porém, decidi fazer uma transição de carreira, precisava criar e desenvolver, não apenas seguir uma rotina coorporativa;
+                    - Em 2021, iniciei o curso de Análise de Dados e Sistemas e busco uma oportunidade de me desenvolver e aprender;
+                    - Utilizo ferramentas como JavaScript, ReactJs, HTML, CSS;
+                    - Também tenho conhecimento de Linguagem de Programação Python</p>
             </div>
 
         </div>
@@ -90,6 +82,11 @@
                 <h3>loja virtual</h3>
                 <div class="btn"><a href="https://joaovasc.github.io/Loja-virtual/">saiba mais</a></div>
             </div>
+            <div class="box">
+                <img src="./img/imc.png" alt="">
+                <h3>Calculadora IMC</h3>
+                <div class="btn"><a href="https://joaovasc.github.io/IMC/">saiba mais</a></div>
+            </div>
         </div>
     </section>
 
@@ -110,6 +107,10 @@
             <div class="box">
                 <img src="./img/js-icon.png" alt="">
                 <h3>JAVASCRIPT</h3>
+            </div>
+            <div class="box">
+                <img class="react" src="./img/pngwing.com (1).png" alt="">
+                <h3>REACT</h3>
             </div>
         </div>
     </section>
